@@ -95,3 +95,8 @@ TODO: подумать о переделке DataHolder/Tensor/tensormath  в А
     - работа над ошибками;
     - перемешивание выборки;
     - инкапсуляция семплов;
+
+* добавлен метод оптимизции Нестерова;
+* добавлен отдельный тест для методов оптимизации;
+* добавлен метод AbstractTutor::clone() для замены учителя налету;
+
